tests/init_state/borrow_precondition/borrow_precondition_violated.err.expected
error: at 25:5: [INIT-BorrowStateMismatch] In function 'shared_of_never_init', block 'entry': cannot create & of 'x': place must be initialized at borrow, but is not yet initialized
    |
 24 |   entry:
 25 |     r = &x;
    |     ^^^^^^
 26 |     return
    |
error: at 33:5: [INIT-BorrowStateMismatch] In function 'shared_of_moved', block 'entry': cannot create & of 'x': place must be initialized at borrow, but is moved-from
    |
 32 |     call sink(move x);
 33 |     r = &x;
    |     ^^^^^^
 34 |     return
    |
error: at 42:5: [INIT-BorrowStateMismatch] In function 'shared_of_partial', block 'entry': cannot create & of 'p': place must be initialized at borrow, but is partially initialized
    |
 41 |     p.x = 1;
 42 |     r = &p;
    |     ^^^^^^
 43 |     return
    |
error: at 52:5: [INIT-BorrowStateMismatch] In function 'mut_of_never_init', block 'entry': cannot create &mut of 'x': place must be initialized at borrow, but is not yet initialized
    |
 51 |   entry:
 52 |     r = &mut x;
    |     ^^^^^^^^^^
 53 |     return
    |
error: at 63:5: [INIT-BorrowStateMismatch] In function 'mut_of_never_init_field', block 'entry': cannot create &mut of 'p.y': place must be initialized at borrow, but is not yet initialized
    |
 62 |     p.x = 1;
 63 |     r = &mut p.y;
    |     ^^^^^^^^^^^^
 64 |     return
    |
error: at 73:5: [INIT-BorrowStateMismatch] In function 'drop_of_never_init', block 'entry': cannot create &drop of 'x': place must be initialized at borrow, but is not yet initialized
    |
 72 |   entry:
 73 |     r = &drop x;
    |     ^^^^^^^^^^^
 74 |     return
    |
error: at 74:5: [INIT-RefObligationUnfulfilled] In function 'drop_of_never_init', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 70 |   x: i64;
 71 |   r: &drop i64;
    |   ------------- reference declared here
 72 |   entry:
 73 |     r = &drop x;
 74 |     return
    |     ^^^^^^
 75 | }
    |
error: at 82:5: [INIT-BorrowStateMismatch] In function 'drop_of_partial', block 'entry': cannot create &drop of 'p': place must be initialized at borrow, but is partially initialized
    |
 81 |     p.x = 1;
 82 |     r = &drop p;
    |     ^^^^^^^^^^^
 83 |     return
    |
error: at 83:5: [INIT-RefObligationUnfulfilled] In function 'drop_of_partial', block 'entry': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 78 |   p: P;
 79 |   r: &drop P;
    |   ----------- reference declared here
 80 |   entry:
    |
    | ...
    |
 82 |     r = &drop p;
 83 |     return
    |     ^^^^^^
 84 | }
    |
error: at 93:5: [INIT-BorrowStateMismatch] In function 'out_of_partial', block 'entry': cannot create &out of 'p': place must be uninitialized at borrow, but is partially initialized
    |
 92 |     p.x = 1;
 93 |     r = &out p;
    |     ^^^^^^^^^^
 94 |     return
    |
error: at 94:5: [INIT-RefObligationUnfulfilled] In function 'out_of_partial', block 'entry': reference 'r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
    |
 89 |   p: P;
 90 |   r: &out P;
    |   ---------- reference declared here
 91 |   entry:
    |
    | ...
    |
 93 |     r = &out p;
 94 |     return
    |     ^^^^^^
 95 | }
    |
error: at 102:5: [INIT-BorrowStateMismatch] In function 'out_of_init_non_drop', block 'entry': cannot create &out of 'x': place must be uninitialized at borrow, but is initialized
     |
 101 |   entry:
 102 |     rr = &out x;
     |     ^^^^^^^^^^^
 103 |     return
     |
  hint: move 'x' out first — linear values cannot be forgotten in place
error: at 103:5: [INIT-RefObligationUnfulfilled] In function 'out_of_init_non_drop', block 'entry': reference 'rr' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
     |
  99 | fn out_of_init_non_drop(x: Linear) {
 100 |   rr: &out Linear;
     |   ---------------- reference declared here
 101 |   entry:
 102 |     rr = &out x;
 103 |     return
     |     ^^^^^^
 104 | }
     |
error: at 103:5: [INIT-RefObligationUnfulfilled] In function 'out_of_init_non_drop', block 'entry': reference 'x.r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
     |
  98 | # failure carries the "move out first" hint.
  99 | fn out_of_init_non_drop(x: Linear) {
     |                         --------- reference declared here
 100 |   rr: &out Linear;
     |
     | ...
     |
 102 |     rr = &out x;
 103 |     return
     |     ^^^^^^
 104 | }
     |
error: at 111:5: [INIT-BorrowStateMismatch] In function 'uninit_of_init_non_drop', block 'entry': cannot create &uninit of 'x': place must be uninitialized at borrow, but is initialized
     |
 110 |   entry:
 111 |     rr = &uninit x;
     |     ^^^^^^^^^^^^^^
 112 |     return
     |
  hint: move 'x' out first — linear values cannot be forgotten in place
error: at 112:5: [INIT-RefObligationUnfulfilled] In function 'uninit_of_init_non_drop', block 'entry': reference 'x.r' has unfulfilled obligation: pointee is uninitialized, but must be initialized before the reference expires
     |
 107 | 
 108 | fn uninit_of_init_non_drop(x: Linear) {
     |                            --------- reference declared here
 109 |   rr: &uninit Linear;
     |
     | ...
     |
 111 |     rr = &uninit x;
 112 |     return
     |     ^^^^^^
 113 | }
     |
